<resources>
    <string name="app_name">Singla Groups</string>
    <string name="authority">${applicationId}.provider</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_firm_name">* Company/Firm Name</string>
    <string name="prompt_name">* Name</string>
    <string name="prompt_designation">* Designation</string>
    <string name="prompt_address">* Address</string>
    <string name="prompt_mobile">* Mobile</string>
    <string name="prompt_landline">Landline No</string>
    <string name="prompt_country">* Country</string>
    <string name="prompt_fax">Fax</string>
    <string name="prompt_email">* Email</string>
    <string name="prompt_pincode">* Pincode</string>
    <string name="action_sign_up">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_title">Error Title</string>
    <string name="errors">Errors</string>
    <string name="ok">OK</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_attachment">Attachment</string>
    <string name="action_save_next">Save|Next</string>
    <string name="action_view_report">View Report</string>
    <string name="action_Push_Fca">Push Into Fca</string>
    <string name="action_Expected_Datetime">Expected Delivery Datetime</string>
    <string name="action_filter_search">Filter Search</string>
    <string name="action_filter_sort">Filter Sort</string>
    <string name="stock">Stock</string>
    <string name="voucher_type">Select Voucher Type</string>
    <string name="running_customer">Select running customer</string>
    <string name="title_Cart">Cart</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_single_view">Single View</string>
    <string name="title_whatsapp">Whats App</string>
    <string name="party_list">Select a Party</string>
    <string name="sub_party_list">Select a Subparty</string>
    <string name="employee_list">Select a Employee</string>
    <!-- TODO: Whats app -->
    <string name="packname">com.whatsapp</string>
    <string name="service_desc">Enable Copier and see the magic of COPIER to copy all text that you can not able to copy.</string>
    <!-- TODO: Dataset -->
    <item type="id" name="dataset"/>
    <item type="id" name="position"/>

</resources>
