<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/Action_Search"
      android:title="@string/action_search"
      android:visible="false"
      android:icon="@drawable/ic_action_search_white"
      app:actionViewClass="android.support.v7.widget.SearchView"
      app:showAsAction="always|collapseActionView"/>
  <item
        android:id="@+id/Save_Next"
        android:title="@string/action_save_next"
        android:icon="@drawable/ic_action_save_white"
        app:showAsAction="always"/>
  <item
      android:id="@+id/Report_View"
      android:title="@string/action_view_report"
      android:icon="@drawable/ic_action_view_report_white"
      app:showAsAction="always"/>
  <item
      android:id="@+id/Push_Fca"
      android:title="@string/action_Push_Fca"
      android:icon="@drawable/ic_action_server_upload_white"
      app:showAsAction="always"/>
  <item
      android:id="@+id/Expected_Datetime"
      android:title="@string/action_Expected_Datetime"
      android:icon="@drawable/ic_action_datetime_white"
      android:visible="false"
      app:showAsAction="always"/>
  <item
      android:id="@+id/Print"
      android:title="@string/action_Expected_Datetime"
      android:icon="@drawable/ic_action_print_white"
      android:visible="false"
      app:showAsAction="always"/>
</menu>
