<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="appareals.singla.singlaappareals.MainActivity">
  <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
  <item
      android:id="@+id/action_logout"
      android:title="@string/action_logout"
      android:visible="false"
      android:icon="@drawable/ic_action_logout"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_filter_search"
      android:title="@string/action_filter_search"
      android:visible="false"
      android:icon="@drawable/ic_action_filter_search"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_filter_sort"
      android:title="@string/action_filter_sort"
      android:visible="false"
      android:icon="@drawable/ic_action_filter_sort_white"
      app:showAsAction="always"/>
</menu>
